Added parameter display for packets in tmph

--- a/auris-tmph/auris-tmph.cabal
+++ b/auris-tmph/auris-tmph.cabal
@@ -45,8 +45,10 @@ library
   exposed-modules:
     GUI.PUSPacketTable
     GUI.TMPacketTable
+    GUI.TMPParamTable
     Model.PUSPacketModel
     Model.TMPacketModel
+    Model.TMPParamModel
 
 
 
