Some work on GUI

--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -46,6 +46,7 @@ Executable AURISi
   Other-modules:
     GUI.MainWindow
     GUI.MainWindowCallbacks
+    GUI.ParamDetailWindow
     GUI.MessageDisplay
     AurisInterface
     AurisProcessing
