--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -35,10 +35,10 @@ flag llvm
         build library with llvm
     default: False
 
-flag optimize 
-    description: 
+flag optimize
+    description:
       build library with optimization
-    default: False 
+    default: False
 
 
 Executable AURISi
@@ -46,6 +46,7 @@ Executable AURISi
   Other-modules:
     GUI.MainWindow
     GUI.MainWindowCallbacks
+    GUI.TMPacketTab
     GUI.ParamDetailWindow
     GUI.MessageDisplay
     AurisInterface
@@ -125,12 +126,12 @@ Executable AURISi
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -fllvm -optlo-O3 -threaded -rtsopts
-  else 
-    if flag(optimize) 
+  else
+    if flag(optimize)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields  -threaded -rtsopts
-    else 
+    else
         ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields  -threaded -rtsopts
