--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -50,6 +50,7 @@ Executable AURISi
     GUI.ParamDetailWindow
     GUI.MessageDisplay
     GUI.Logo
+    GUI.About
     AurisInterface
     AurisProcessing
     AurisConfig
