--- a/auris-tmph/auris-tmph.cabal
+++ b/auris-tmph/auris-tmph.cabal
@@ -33,10 +33,10 @@ flag llvm
         build library with llvm
     default: False
 
-flag optimize 
-    description: 
+flag optimize
+    description:
       build library with optimization
-    default: False 
+    default: False
 
 
 
@@ -46,9 +46,11 @@ library
     GUI.PUSPacketTable
     GUI.TMPacketTable
     GUI.TMPParamTable
+    GUI.TMFrameTable
     Model.PUSPacketModel
     Model.TMPacketModel
     Model.TMPParamModel
+    Model.TMFrameModel
 
 
 
@@ -113,12 +115,12 @@ library
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -fllvm -optlo-O3
-  else 
-    if flag(optimize) 
+  else
+    if flag(optimize)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
-    else 
+    else
         ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
