Added gap display for frames

--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -135,6 +135,7 @@ library
         TypeSynonymInstances
         ViewPatterns
         NumericUnderscores
+        TypeApplications
 
   -- Other library packages from which modules are imported.
   build-depends:       base ^>=4.12.0.0
