Added event handling for packets

--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -46,6 +46,7 @@ Executable AURISi
   Other-modules:
     GUI.MainWindow
     GUI.MainWindowCallbacks
+    GUI.MainWindowActions
     GUI.MessageDisplay
     GUI.Logo
     GUI.About
