--- a/auris-tmph/auris-tmph.cabal
+++ b/auris-tmph/auris-tmph.cabal
@@ -50,6 +50,7 @@ library
     GUI.TMPacketTab
     GUI.TMFrameTab
     GUI.TMParamTab
+    GUI.Graph
     Model.PUSPacketModel
     Model.TMPacketModel
     Model.TMPParamModel
@@ -72,7 +73,10 @@ library
     Chart,
     Chart-fltkhs,
     colour,
-    data-default-class
+    data-default-class,
+    multiset,
+    thyme
+
 
   default-extensions:
         AutoDeriveTypeable
