--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -155,6 +155,7 @@ library
     , megaparsec
     , reinterpret-cast
     , thyme
+    , time
     , bytestring-strict-builder
     , attoparsec
     , attoparsec-binary
