--- a/gui-base/gui-base.cabal
+++ b/gui-base/gui-base.cabal
@@ -66,6 +66,7 @@ library
     GUI.Utils
     GUI.ScrollingTable
     GUI.NameDescrTable
+    GUI.PopupMenu
     Model.ScrollingTableModel
 
   -- Modules included in this library but not exported.
