--- a/stack_llvm.yaml
+++ b/stack_llvm.yaml
@@ -36,7 +36,7 @@ packages:
 - esa-tm-model
 - mcs-interface
 - gui-base
-- auris-tmph
+- auris-tm-displays
 - aurisi
 - hashtables
 
@@ -73,7 +73,7 @@ flags:
       llvm: true
     esa-space-protocols:
       llvm: true
-    auris-tmph:
+    auris-tm-displays:
       llvm: true
     aurisi:
       llvm: true
