--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -88,6 +88,7 @@ library
     Data.TM.TMPacketDef
     Data.TM.PIVals
     Data.TM.Synthetic
+    Data.Display.Graphical
 
   -- Modules included in this library but not exported.
   -- other-modules:
@@ -162,6 +163,7 @@ library
     , base64-bytestring-type
     , mtl
     , hashtables
+    , colour
 
   -- Directories containing source files.
   hs-source-dirs:      src
