Switched to per-virtual channel processing

--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -80,7 +80,8 @@ Executable AURISi
     filepath,
     text-short,
     file-embed,
-    hashtables
+    hashtables,
+    stm-conduit
 
   Other-Modules: AURISi
 
