--- a/config.json
+++ b/config.json
@@ -1,12 +1,16 @@
 {
+    "aurisCnCTCPort": 22222,
     "aurisNctrsTMPort": 2502,
+    "aurisCnCHost": "localhost",
     "aurisNctrsHost": "localhost",
     "aurisNctrsTCPort": 20009,
+    "aurisCnCTMPort": 33333,
     "aurisMIB": null,
     "aurisNctrsAdminPort": 20010,
     "aurisMission": "DEFAULT",
     "aurisPusConfig": {
         "cfgUnknownSPID": 5071,
+        "cfgCncHasCRC": false,
         "cfgEpoch": "UnixTime",
         "cfgInterfacePort": 55555,
         "cfgRandomizerStartValue": 255,
@@ -22,7 +26,7 @@
             "fromLeaps": 17
         },
         "cfgSCID": {
-            "getSCID": 151
+            "getSCID": 0
         },
         "cfgMaxTMFrameLen": 1115,
         "cfgCltuBlockSize": "CltuBS_8",
