--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -81,6 +81,7 @@ library
         Data.PUS.NcduToTMFrame
         Protocol.NCTRS
         Protocol.EDEN
+        Protocol.EDENProcessor
         Protocol.CnC
         Protocol.ProtocolInterfaces
         Protocol.Switcher
