--- a/config.json
+++ b/config.json
@@ -2,7 +2,9 @@
     "aurisCnCTCPort": 22222,
     "aurisNctrsTMPort": 2502,
     "aurisCnCHost": "localhost",
+    "aurisEdenHost": "localhost",
     "aurisNctrsHost": "localhost",
+    "aurisEdenPort": 40300,
     "aurisNctrsTCPort": 20009,
     "aurisCnCTMPort": 33333,
     "aurisMIB": null,
