--- a/stack.yaml
+++ b/stack.yaml
@@ -56,7 +56,7 @@ extra-deps:
 - bytestring-to-vector-0.3.0.1
 - fltkhs-0.8.0.2
 - hw-prim-bits-0.1.0.4
-- Chart-fltkhs-0.1.0.4
+- ../Chart-fltkhs
 # Override default flag values for local packages and extra-deps
 flags:
    fltkhs:
