Renamed hashtable since there were compilation problems

--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -80,7 +80,7 @@ Executable AURISi
     filepath,
     text-short,
     file-embed,
-    hashtables,
+    hashtables-mo,
     stm-conduit
 
   Other-Modules: AURISi
