--- a/hashtables-mo/benchmark/hashtable-benchmark.cabal
+++ b/hashtables-mo/benchmark/hashtable-benchmark.cabal
@@ -26,7 +26,7 @@ Executable hashtable-benchmark
                      deepseq              >= 1.1     && <1.5,
                      filepath             == 1.*,
                      hashable             >= 1.1 && <1.2 || >= 1.2.1 && <1.3,
-                     hashtables           >= 1.2     && <1.3,
+                     hashtables-mo           >= 1.2     && <1.3,
                      mtl                  == 2.*,
                      mwc-random           >= 0.8     && <0.14,
                      primitive,
