--- a/hashtables-mo/hashtables-mo.cabal
+++ b/hashtables-mo/hashtables-mo.cabal
@@ -1,5 +1,5 @@
 Cabal-Version: 2.2
-Name:                hashtables
+Name:                hashtables-mo
 Version:             1.2.3.4
 Synopsis:            Mutable hash tables in the ST monad
 Homepage:            http://github.com/gregorycollins/hashtables
