--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -165,6 +165,7 @@ library
     , mtl
     , hashtables-mo
     , colour
+    , compact
 
   -- Directories containing source files.
   hs-source-dirs:      src
