Upgraded to LTS-15.1 and to GHC 8.8.3

--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -21,7 +21,7 @@ source-repository head
 
 custom-setup
   setup-depends:
-      Cabal >=2.2.0.0 && <3
+      Cabal >=2.2.0.0 && <4
     , base >=4.4
     , filepath
 
@@ -81,8 +81,7 @@ Executable AURISi
     text-short,
     file-embed,
     hashtables-mo,
-    stm-conduit,
-    compact
+    stm-conduit
 
   Other-Modules: AURISi
 
