--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -139,7 +139,7 @@ library
         TypeApplications
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ^>=4.12.0.0
+  build-depends:       base == 4.*
     , bytestring
     , vector
     , text
@@ -165,7 +165,7 @@ library
     , mtl
     , hashtables-mo
     , colour
-    , compact
+
 
   -- Directories containing source files.
   hs-source-dirs:      src
