--- a/esa-mib/esa-mib.cabal
+++ b/esa-mib/esa-mib.cabal
@@ -135,7 +135,7 @@ library
         TypeSynonymInstances
         ViewPatterns
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base ==4.*
     , binary
     , serialise
     , aeson
