--- a/gui-base/gui-base.cabal
+++ b/gui-base/gui-base.cabal
@@ -76,7 +76,7 @@ library
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ^>=4.12.0.0
+  build-depends:       base ==4.*
     , rio
     , fltkhs
     , containers
