--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -180,7 +180,6 @@ library
         , hashtables-mo
         , vector-builder
         , pretty-show
-        , compact
         , filepath
         , directory
 
@@ -206,7 +205,7 @@ executable WriteConfig
     build-depends:
         esa-space-protocols -any,
         esa-base -any,
-        base >=4.12.0.0 && <4.13,
+        base ==4.*,
         bytestring >=0.10.8.2 && <0.11
 
 
@@ -217,7 +216,7 @@ benchmark TestBits
     hs-source-dirs: src/bench
     ghc-options: -Wall -O2
     build-depends:
-        base >=4.12.0.0 && <4.13,
+        base ==4.*,
         bits-extra,
         formatting,
         text,
