--- a/esa-tm-model/esa-tm-model.cabal
+++ b/esa-tm-model/esa-tm-model.cabal
@@ -72,7 +72,7 @@ library
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ^>=4.12.0.0,
+  build-depends:       base ==4.*,
     esa-base,
     rio,
     text-short
