--- a/mcs-interface/mcs-interface.cabal
+++ b/mcs-interface/mcs-interface.cabal
@@ -78,7 +78,7 @@ library
 
   -- Other library packages from which modules are imported.
   build-depends:
-    base ^>=4.12.0.0
+    base ==4.*
     , esa-space-protocols
     , rio
     , aeson
