--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-14.27
+resolver: lts-15.1
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -54,9 +54,14 @@ extra-deps:
 - closed-0.2.0.1
 - attoparsec-time-1
 - bytestring-to-vector-0.3.0.1
-- fltkhs-0.8.0.2
+- fltkhs-0.8.0.3
 - hw-prim-bits-0.1.0.4
-- Chart-fltkhs-0.1.0.5
+- Chart-fltkhs-0.1.0.6
+- selda-sqlite-0.1.7.1
+- ../timer-wheel
+- direct-sqlite-2.3.26
+
+
 # Override default flag values for local packages and extra-deps
 flags:
    fltkhs:
