Removed current implementation of FOP1

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -163,7 +163,7 @@ library
         , thyme
         , vector-binary-instances
         , bytestring-to-vector
-        , timer-wheel
+        , timers-updatable
         , base64-bytestring-type
         , containers
         , word8
