--- a/stack.yaml
+++ b/stack.yaml
@@ -58,9 +58,7 @@ extra-deps:
 - hw-prim-bits-0.1.0.4
 - Chart-fltkhs-0.1.0.6
 - selda-sqlite-0.1.7.1
-# timer-wheel is a patched version since it does not compile with ghc 8.8.3.
-# this should be changed when it is fixed or if it is included in an LTS again
-- timer-wheel
+- timers-updatable-0.2.0.2
 - direct-sqlite-2.3.26
 
 
