--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-15.2
+resolver: lts-15.14
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -54,12 +54,13 @@ extra-deps:
 - closed-0.2.0.1
 - attoparsec-time-1
 - bytestring-to-vector-0.3.0.1
-- fltkhs-0.8.0.3
 - hw-prim-bits-0.1.0.4
 - Chart-fltkhs-0.1.0.6
 - selda-sqlite-0.1.7.1
 - timers-updatable-0.2.0.2
 - direct-sqlite-2.3.26
+- git: https://github.com/deech/fltkhs.git
+  commit: 71af56f7194946a495e0d9d6457470f97988f754
 
 
 # Override default flag values for local packages and extra-deps
@@ -70,7 +71,7 @@ flags:
   #    opengl: true
 
 ghc-options: 
-  "$targets": -freverse-errors
+  "$targets": -freverse-errors 
 
 # Extra package databases containing global packages
 # extra-package-dbs: []
