--- a/gui-base/gui-base.cabal
+++ b/gui-base/gui-base.cabal
@@ -82,6 +82,7 @@ library
     , containers
     , lens
     , text
+    , vector
 
 
   default-extensions:
@@ -143,4 +144,22 @@ library
     else 
         ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-                     -funbox-strict-fields
+                     -funbox-strict-fields -freverse-errors
+
+
+benchmark PerfTableModel 
+    type: exitcode-stdio-1.0
+    main-is: PerfTableModel.hs
+    default-language: Haskell2010
+    hs-source-dirs: src/bench
+    ghc-options: -Wall -O2
+    build-depends:
+      base ==4.*
+      , rio
+      , fltkhs
+      , containers
+      , lens
+      , text
+      , vector
+      , criterion
+      , gui-base 
