--- a/stack.yaml
+++ b/stack.yaml
@@ -61,14 +61,14 @@ extra-deps:
 - direct-sqlite-2.3.26
 - git: https://github.com/deech/fltkhs.git
   commit: 71af56f7194946a495e0d9d6457470f97988f754
-
+  # commit: 507bea3ceaf1d2d86a1a7060335cb9b9228fcafe
 
 # Override default flag values for local packages and extra-deps
 flags:
    fltkhs:
      bundled: true
-  #  fltkhs:
-  #    opengl: true
+   # fltkhs:
+   #   opengl: true
 
 ghc-options: 
   "$targets": -freverse-errors 
