--- a/gui-base/gui-base.cabal
+++ b/gui-base/gui-base.cabal
@@ -78,7 +78,7 @@ library
   -- Other library packages from which modules are imported.
   build-depends:       base ==4.*
     , rio
-    , fltkhs
+    , fltkhs >= 0.8.0.2
     , containers
     , lens
     , text
@@ -147,16 +147,18 @@ library
                      -funbox-strict-fields -freverse-errors
 
 
-benchmark PerfTableModel 
+executable PerfTableModel 
     type: exitcode-stdio-1.0
     main-is: PerfTableModel.hs
     default-language: Haskell2010
     hs-source-dirs: src/bench
-    ghc-options: -Wall -O2
+    ghc-options: -Wall -O2 -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0 -rtsopts
+    if !os(darwin) && !os(windows)
+       ghc-options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
     build-depends:
       base ==4.*
       , rio
-      , fltkhs
+      , fltkhs >= 0.8.0.2
       , containers
       , lens
       , text
