--- a/stack.yaml
+++ b/stack.yaml
@@ -61,7 +61,6 @@ extra-deps:
 - direct-sqlite-2.3.26
 - git: https://github.com/deech/fltkhs.git
   commit: 71af56f7194946a495e0d9d6457470f97988f754
-  # commit: 507bea3ceaf1d2d86a1a7060335cb9b9228fcafe
 
 # Override default flag values for local packages and extra-deps
 flags:
@@ -93,3 +92,9 @@ ghc-options:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+
+# if you want to profile, add SCC cost centres by hand for the functions you 
+# want to profile and then compile with:
+# stack build --profile --ghc-options="-fno-prof-auto"
+apply-ghc-options: everything
+rebuild-ghc-options: true
