--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -51,6 +51,6 @@
         "cfgTMFrameHasCRC": true
     },
     "aurisLogLevel": {
-        "tag": "LogLevelInfo"
+        "tag": "LogLevelDebug"
     }
 }
