--- a/esa-tm-model/esa-tm-model.cabal
+++ b/esa-tm-model/esa-tm-model.cabal
@@ -72,8 +72,10 @@ library
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ==4.*,
+  build-depends:       
+    base ==4.*,
     esa-base,
+    esa-space-protocols,
     rio,
     text-short
 
@@ -96,3 +98,17 @@ library
         ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
+
+
+executable FirstTMModelTest
+    main-is: Main.hs
+    default-language: Haskell2010
+    hs-source-dirs: src
+    ghc-options: -Wall -O
+    build-depends:
+        esa-space-protocols -any,
+        esa-base -any,
+        base ==4.*,
+        bytestring >=0.10.8.2 && <0.11,
+        rio,
+        text-short
