--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -14,6 +14,8 @@ cabal-version: >=2.0
 extra-source-files:
     src/AURISi.fl
 
+extra-source-files:
+  theme.tar.gz
 
 source-repository head
   type: git
