--- a/esa-db/esa-db.cabal
+++ b/esa-db/esa-db.cabal
@@ -39,22 +39,20 @@ flag optimize
 
 library
   exposed-modules:
-      Persistence.Db
-      Persistence.EventLog
+      Persistence.Logging
+      Persistence.TMFrame
   other-modules:
+      Persistence.Internals
       Paths_esa_db
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
-    , directory
-    , mtl
-    , random
+    , conduit
     , rio
     , selda
     , selda-sqlite
     , stm
-    , text
     , time
   default-language: Haskell2010
 
@@ -80,17 +78,12 @@ test-suite esa-db-test
       Paths_esa_db
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , directory
     , esa-db
-    , mtl
-    , random
+    , hspec
     , rio
     , selda
     , selda-sqlite
-    , stm
-    , text
-    , time
   default-language: Haskell2010
