Store TMFrames to database

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -173,6 +173,7 @@ library
         , sorted-list
         , deepseq
         , esa-base
+        , esa-db
         , network
         , streaming-commons
         , text-short
