Converted message display

--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -112,6 +112,7 @@ Executable AURISi
         MultiWayIf
         NamedFieldPuns
         OverloadedStrings
+        OverloadedLabels
         PartialTypeSignatures
         PatternGuards
         PolyKinds
