Restructuring the chart widget

--- a/auris-tm-displays/auris-tm-displays.cabal
+++ b/auris-tm-displays/auris-tm-displays.cabal
@@ -50,7 +50,8 @@ library
     GUI.TMPacketTab
     GUI.TMFrameTab
     GUI.TMParamTab
-    GUI.Graph
+    GUI.Chart
+    GUI.GraphWidget
     GUI.ParamDisplay
     Model.PUSPacketModel
     Model.TMPacketModel
